--- a/index.html
+++ b/index.html
@@ -11,190 +11,208 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
       integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-      crossorigin="anonymous" referrerpolicy="no-referrer" />
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
-      <nav class="header-navigation">
-        <a class="logo link" href="./index.html" lang="en"
-          ><span class="header-logo-color-one">Web</span
-          ><span class="header-logo-color-two">Studio</span></a
-        >
+      <div class="container">
+        <nav class="header-navigation">
+          <a class="logo link" href="./index.html" lang="en"
+            ><span class="header-logo-color-one">Web</span
+            ><span class="header-logo-color-two">Studio</span></a
+          >
+          <ul class="header-list list">
+            <li class="header-item">
+              <a
+                class="header-link link header-link-current"
+                href="./index.html"
+                >Студія</a
+              >
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="./portfolio.html">Портфоліо</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="./index.html">Контакти</a>
+            </li>
+          </ul>
+        </nav>
         <ul class="header-list list">
-          <li class="header-item">
-            <a class="header-link link header-link-current" href="./index.html"
-              >Студія</a
-            >
-          </li>
-          <li class="header-item">
-            <a class="header-link link" href="./portfolio.html">Портфоліо</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link link" href="./index.html">Контакти</a>
-          </li>
-        </ul>
-      </nav>
-      <ul class="header-list list">
-        <li>
-          <a class="contact-link link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a class="contact-link link" href="tel:+380961111111"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
-    </header>
-
-    <main>
-      <section class="hero">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button class="hero-button" type="button">Замовити послугу</button>
-      </section>
-
-      <section class="benefits">
-        <h2 class="section-title h-invis">Наші переваги</h2>
-        <ul class="benefits-list">
-          <li class="benefits-item list">
-            <h3 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="benefits-after-title">
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li class="benefits-item list">
-            <h3 class="benefits-title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="benefits-after-title">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li class="benefits-item list">
-            <h3 class="benefits-title">ПЛАНУВАННЯ</h3>
-            <p class="benefits-after-title">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li class="benefits-item list">
-            <h3 class="benefits-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="benefits-after-title">
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
-      </section>
-
-      <section class="wedoing">
-        <h2 class="section-title">Чим ми займаємося</h2>
-        <ul class="wedoing-list list">
-          <li class="wedoing-item">
-            <img
-              src="./images/whatwedo-1.jpg"
-              alt="what we do"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="wedoing-item">
-            <img
-              src="./images/whatwedo-2.jpg"
-              alt="what we do"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="wedoing-item">
-            <img
-              src="./images/whatwedo-3.jpg"
-              alt="what we do"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
-      </section>
-
-      <section class="team">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="team-list list">
-          <li class="team-item">
-            <img
-              src="./images/team-1.jpg"
-              alt="Ігор Дем'яненко"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-name-surname">Ігор Дем'яненко</h3>
-            <p class="team-position" lang="en">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/team-2.jpg"
-              alt="Ольга Рєпіна"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-name-surname">Ольга Рєпіна</h3>
-            <p class="team-position" lang="en">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/team-3.jpg"
-              alt="Микола Тарасов"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-name-surname">Микола Тарасов</h3>
-            <p class="team-position" lang="en">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/team-4.jpg"
-              alt="Михайло Єрмаков"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-name-surname">Михайло Єрмаков</h3>
-            <p class="team-position" lang="en">UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-
-    <footer class="footer">
-      <a class="logo link" href="./index.html" lang="en"
-        ><span class="footer-logo-color-one">Web</span
-        ><span class="footer-logo-color-two">Studio</span></a
-      >
-      <address class="footer-adress">
-        <ul class="footer-list">
-          <li class="footer-item list">
-            <a
-              class="footer-location link"
-              href="https://goo.gl/maps/VnHejfKeaQAx6Wpp9"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li class="footer-item list">
+          <li>
             <a class="contact-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="footer-item list">
+          <li>
             <a class="contact-link link" href="tel:+380961111111"
               >+38 096 111 11 11</a
             >
           </li>
         </ul>
-      </address>
+      </div>
+    </header>
+
+    <main>
+      <section class="hero">
+        <div class="container">
+          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+          <button class="hero-button" type="button">Замовити послугу</button>
+        </div>
+      </section>
+
+      <section class="benefits">
+        <div class="container">
+          <h2 class="section-title h-invis">Наші переваги</h2>
+          <ul class="benefits-list">
+            <li class="benefits-item list">
+              <h3 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="benefits-after-title">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li class="benefits-item list">
+              <h3 class="benefits-title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="benefits-after-title">
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li class="benefits-item list">
+              <h3 class="benefits-title">ПЛАНУВАННЯ</h3>
+              <p class="benefits-after-title">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li class="benefits-item list">
+              <h3 class="benefits-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="benefits-after-title">
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="wedoing">
+        <div class="container">
+          <h2 class="section-title">Чим ми займаємося</h2>
+          <ul class="wedoing-list list">
+            <li class="wedoing-item">
+              <img
+                src="./images/whatwedo-1.jpg"
+                alt="what we do"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="wedoing-item">
+              <img
+                src="./images/whatwedo-2.jpg"
+                alt="what we do"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="wedoing-item">
+              <img
+                src="./images/whatwedo-3.jpg"
+                alt="what we do"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="team">
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="team-list list">
+            <li class="team-item">
+              <img
+                src="./images/team-1.jpg"
+                alt="Ігор Дем'яненко"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-name-surname">Ігор Дем'яненко</h3>
+              <p class="team-position" lang="en">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team-2.jpg"
+                alt="Ольга Рєпіна"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-name-surname">Ольга Рєпіна</h3>
+              <p class="team-position" lang="en">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team-3.jpg"
+                alt="Микола Тарасов"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-name-surname">Микола Тарасов</h3>
+              <p class="team-position" lang="en">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team-4.jpg"
+                alt="Михайло Єрмаков"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-name-surname">Михайло Єрмаков</h3>
+              <p class="team-position" lang="en">UI Designer</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <a class="logo link" href="./index.html" lang="en"
+          ><span class="footer-logo-color-one">Web</span
+          ><span class="footer-logo-color-two">Studio</span></a
+        >
+        <address class="footer-adress">
+          <ul class="footer-list">
+            <li class="footer-item list">
+              <a
+                class="footer-location link"
+                href="https://goo.gl/maps/VnHejfKeaQAx6Wpp9"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li class="footer-item list">
+              <a class="contact-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="footer-item list">
+              <a class="contact-link link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
