Додає клас у логотип футера

--- a/portfolio.html
+++ b/portfolio.html
@@ -193,7 +193,7 @@
 
     <footer class="footer">
       <div class="container">
-        <a class="logo link" href="./index.html" lang="en"
+        <a class="logo logo-footer link" href="./index.html" lang="en"
           ><span class="footer-logo-color-one">Web</span
           ><span class="footer-logo-color-two">Studio</span></a
         >
