--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <nav class="header-navigation">
-          <a class="logo link" href="./index.html" lang="en"
+          <a class="header-logo link" href="./index.html" lang="en"
             ><span class="header-logo-color-one">Web</span
             ><span class="header-logo-color-two">Studio</span></a
           >
@@ -44,31 +44,33 @@
             </li>
           </ul>
         </nav>
-        <ul class="header-list list">
-          <li>
-            <a class="contact-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="contact-link link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+        <div class="header-connect">
+          <ul class="header-list list">
+            <li>
+              <a class="contact-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contact-link link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
 
     <main>
       <section class="hero">
-        <div class="container">
+        <div class="container hero-container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button class="hero-button" type="button">Замовити послугу</button>
         </div>
       </section>
 
       <section class="benefits">
-        <div class="container">
+        <div class="container benefits-container">
           <h2 class="section-title h-invis">Наші переваги</h2>
           <ul class="benefits-list">
             <li class="benefits-item list">
@@ -103,7 +105,7 @@
       </section>
 
       <section class="wedoing">
-        <div class="container">
+        <div class="container wedoing-container">
           <h2 class="section-title">Чим ми займаємося</h2>
           <ul class="wedoing-list list">
             <li class="wedoing-item">
@@ -135,7 +137,7 @@
       </section>
 
       <section class="team">
-        <div class="container">
+        <div class="container team-container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team-list list">
             <li class="team-item">
@@ -185,7 +187,7 @@
 
     <footer class="footer">
       <div class="container">
-        <a class="logo logo-footer link" href="./index.html" lang="en"
+        <a class="footer-logo link" href="./index.html" lang="en"
           ><span class="footer-logo-color-one">Web</span
           ><span class="footer-logo-color-two">Studio</span></a
         >
