--- a/portfolio.html
+++ b/portfolio.html
@@ -22,9 +22,9 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <nav class="header-navigation">
-          <a class="logo link" href="./index.html" lang="en"
+          <a class="header-logo link" href="./index.html" lang="en"
             ><span class="header-logo-color-one">Web</span
             ><span class="header-logo-color-two">Studio</span></a
           >
@@ -44,39 +44,41 @@
             </li>
           </ul>
         </nav>
-        <ul class="header-list list">
-          <li>
-            <a class="contact-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="contact-link link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+        <div class="header-connect">
+          <ul class="header-list list">
+            <li>
+              <a class="contact-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contact-link link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
 
     <main>
       <section class="portfolio">
-        <div class="container">
+        <div class="container portfolio-container">
           <h1 class="hero-title h-invis">Наші роботи</h1>
-          <ul class="portfolio-list list">
-            <li class="portfolio-item">
+          <ul class="portfolio-buttons list">
+            <li class="portfolio-buttons-item">
               <button class="portfolio-button" type="button">Усі</button>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio-buttons-item">
               <button class="portfolio-button" type="button">Веб-сайти</button>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio-buttons-item">
               <button class="portfolio-button" type="button">Додатки</button>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio-buttons-item">
               <button class="portfolio-button" type="button">Дизайн</button>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio-buttons-item">
               <button class="portfolio-button" type="button">Маркетинг</button>
             </li>
           </ul>
@@ -193,7 +195,7 @@
 
     <footer class="footer">
       <div class="container">
-        <a class="logo logo-footer link" href="./index.html" lang="en"
+        <a class="footer-logo link" href="./index.html" lang="en"
           ><span class="footer-logo-color-one">Web</span
           ><span class="footer-logo-color-two">Studio</span></a
         >
