Виправляє помилки форматування

--- a/index.html
+++ b/index.html
@@ -147,8 +147,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-name-surname">Ігор Дем'яненко</h3>
-              <p class="team-position" lang="en">Product Designer</p>
+              <div class="team-description">
+                <h3 class="team-name-surname">Ігор Дем'яненко</h3>
+                <p class="team-position" lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -157,8 +159,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-name-surname">Ольга Рєпіна</h3>
-              <p class="team-position" lang="en">Frontend Developer</p>
+              <div class="team-description">
+                <h3 class="team-name-surname">Ольга Рєпіна</h3>
+                <p class="team-position" lang="en">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -167,8 +171,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-name-surname">Микола Тарасов</h3>
-              <p class="team-position" lang="en">Marketing</p>
+              <div class="team-description">
+                <h3 class="team-name-surname">Микола Тарасов</h3>
+                <p class="team-position" lang="en">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -177,8 +183,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-name-surname">Михайло Єрмаков</h3>
-              <p class="team-position" lang="en">UI Designer</p>
+              <div class="team-description">
+                <h3 class="team-name-surname">Михайло Єрмаков</h3>
+                <p class="team-position" lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
