--- a/portfolio.html
+++ b/portfolio.html
@@ -91,8 +91,10 @@
                 width="370"
                 height="294"
               />
-              <h3 class="portfolio-title">Технокряк</h3>
-              <p class="portfolio-after-title">Веб-сайт</p>
+              <div class="portfolio-description">
+                <h3 class="portfolio-title">Технокряк</h3>
+                <p class="portfolio-after-title">Веб-сайт</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -101,10 +103,12 @@
                 width="370"
                 height="294"
               />
-              <h3 class="portfolio-title">
-                Постер <span lang="en"> New Orlean vs Golden Star</span>
-              </h3>
-              <p class="portfolio-after-title">Дизайн</p>
+              <div class="portfolio-description">
+                <h3 class="portfolio-title">
+                  Постер <span lang="en"> New Orlean vs Golden Star</span>
+                </h3>
+                <p class="portfolio-after-title">Дизайн</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -113,10 +117,12 @@
                 width="370"
                 height="294"
               />
-              <h3 class="portfolio-title">
-                Ресторан <span lang="en">Seafood</span>
-              </h3>
-              <p class="portfolio-after-title">Додаток</p>
+              <div class="portfolio-description">
+                <h3 class="portfolio-title">
+                  Ресторан <span lang="en">Seafood</span>
+                </h3>
+                <p class="portfolio-after-title">Додаток</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -125,10 +131,12 @@
                 width="370"
                 height="294"
               />
-              <h3 class="portfolio-title">
-                Проєкт <span lang="en">Prime</span>
-              </h3>
-              <p class="portfolio-after-title">Маркетинг</p>
+              <div class="portfolio-description">
+                <h3 class="portfolio-title">
+                  Проєкт <span lang="en">Prime</span>
+                </h3>
+                <p class="portfolio-after-title">Маркетинг</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -137,10 +145,12 @@
                 width="370"
                 height="294"
               />
-              <h3 class="portfolio-title">
-                Проєкт <span lang="en">Boxes</span>
-              </h3>
-              <p class="portfolio-after-title">Додаток</p>
+              <div class="portfolio-description">
+                <h3 class="portfolio-title">
+                  Проєкт <span lang="en">Boxes</span>
+                </h3>
+                <p class="portfolio-after-title">Додаток</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -149,10 +159,12 @@
                 width="370"
                 height="294"
               />
-              <h3 class="portfolio-title">
-                <span lang="en">Inspiration has no Borders</span>
-              </h3>
-              <p class="portfolio-after-title">Веб-сайт</p>
+              <div class="portfolio-description">
+                <h3 class="portfolio-title">
+                  <span lang="en">Inspiration has no Borders</span>
+                </h3>
+                <p class="portfolio-after-title">Веб-сайт</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -161,10 +173,12 @@
                 width="370"
                 height="294"
               />
-              <h3 class="portfolio-title">
-                Видання <span lang="en">Limited Edition</span>
-              </h3>
-              <p class="portfolio-after-title">Дизайн</p>
+              <div class="portfolio-description">
+                <h3 class="portfolio-title">
+                  Видання <span lang="en">Limited Edition</span>
+                </h3>
+                <p class="portfolio-after-title">Дизайн</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -173,8 +187,12 @@
                 width="370"
                 height="294"
               />
-              <h3 class="portfolio-title">Проєкт <span lang="en">LAB</span></h3>
-              <p class="portfolio-after-title">Маркетинг</p>
+              <div class="portfolio-description">
+                <h3 class="portfolio-title">
+                  Проєкт <span lang="en">LAB</span>
+                </h3>
+                <p class="portfolio-after-title">Маркетинг</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -183,10 +201,12 @@
                 width="370"
                 height="294"
               />
-              <h3 class="portfolio-title">
-                <span lang="en">Growing Business</span>
-              </h3>
-              <p class="portfolio-after-title">Додаток</p>
+              <div class="portfolio-description">
+                <h3 class="portfolio-title">
+                  <span lang="en">Growing Business</span>
+                </h3>
+                <p class="portfolio-after-title">Додаток</p>
+              </div>
             </li>
           </ul>
         </div>
